@@ -8,6 +8,7 @@
   * Added support for 'python -m lsl.version'
   * Removed lslTelemetry.py in favor of 'python -m lsl.misc.telemetry'
   * Removed maskWisdom.py in favor of 'python -m lsl.misc.wisdom'
+  * Changed the lsl.correlator.fx.FXMaster polarization keyword from 'Pol' to 'pol'
 
 2.1.2
   * Improved compatibility for measurement sets generated by lsl.writer.measurementset
